deploy/httproute/cert-manager/cert-manager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "cert-manager.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cert-manager-webhook
          port: 443
          namespace: cert-manager
          group: ''
          kind: Service 
          weight: 1
